ART 3.2
* Added Velocity report type
* Added OrgChart report types
* Allow individual jobs to use different smtp servers
* Fix for jpivot reports not working
* Save settings in the art database. Settings will need to be re-entered.
* Fix for job parameter value being blank on edit
* Preserve column order in JSON output
* Changed default connection pool library to hikaricp
* Allow job email addresses to be separated by ,
* Allow application logs to be written to a database
* Added context path variable for freemarker and thymleaf output
* Added useLowerCaseProperties option for template reports
* Allow for testing of ftp, sftp, network share, s3 and azure connections
* Allow for email notification on application errors
* Allow for specifying of password policy for internal authentication passwords
* Allow jxls reports to use open and modify passwords
* Updated mariadb driver, poi, jxls, jclouds

ART 3.1
* Allow dynamic lov to use a dynamic datasource when the lov is a chained parameter
* Fix for error with thymleaf email inline jobs
* Allow localization of report name, short description, description
* Allow localization of report output column names
* Added csv zip report format
* Allow outputting of fixed width reports as txt or zip file
* Allow use of dynamic recipient details in email subject
* Added CSV report type
* Allow setting of password for xlsx, docx, ods, odt, pdf output
* Fix for group column not being saved
* Added ability to encrypt files in AES Crypt or OpenPGP format
* Allow job fixed file name, email subject, email body to have date expressions
* Allow parameter values to have groovy expressions
* Allow jobs to have multiple schedules
* Allow jobs to have holidays
* Allow jobs to use shared schedules and shared holidays
* Allow for clone reports, which use the source of another report
* Allow reports to belong to multiple report groups