@@ -5,7 +5,7 @@ ART 3.2
 * Fix for jpivot reports not working
 * Save settings in the art database. Settings will need to be re-entered.
 * Fix for job parameter value being blank on edit
-* Preserve column order in JSON output
+* Preserve column order in JSON output (thanks to Tin Blaskovic)
 * Changed default connection pool library to hikaricp
 * Allow job email addresses to be separated by ,
 * Allow application logs to be written to a database
@@ -15,6 +15,7 @@ ART 3.2
 * Allow for email notification on application errors
 * Allow for specifying of password policy for internal authentication passwords
 * Allow jxls reports to use open and modify passwords
+* Enable generation of Jasper reports from MongoDB datasources (thanks to Tin Blaskovic)
 * Updated mariadb driver, poi, jxls, jclouds
 
 ART 3.1
